# dagir

./: .clang-format  .gitignore  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  LICENSE  README.md  algorithms_8hpp.html  algorithms_8hpp.js  algorithms_8hpp__dep__incl.map  algorithms_8hpp__dep__incl.md5  algorithms_8hpp__incl.map  algorithms_8hpp__incl.md5  algorithms_8hpp_source.html  annotated.html  annotated_dup.js  build__ir_8hpp.html  build__ir_8hpp.js  build__ir_8hpp__incl.map  build__ir_8hpp__incl.md5  build__ir_8hpp_source.html  children__range_8hpp.html  children__range_8hpp.js  children__range_8hpp__dep__incl.map  children__range_8hpp__dep__incl.md5  children__range_8hpp__incl.map  children__range_8hpp__incl.md5  children__range_8hpp_source.html  classdagir_1_1utility_1_1Parser-members.html  classdagir_1_1utility_1_1Parser.html  classdagir_1_1utility_1_1Parser.js  classdagir_1_1utility_1_1Tokenizer-members.html  classdagir_1_1utility_1_1Tokenizer.html  classdagir_1_1utility_1_1Tokenizer.js  classdagir_1_1utility_1_1cudd__read__only__dag__view-members.html  classdagir_1_1utility_1_1cudd__read__only__dag__view.html  classdagir_1_1utility_1_1cudd__read__only__dag__view.js  classdagir_1_1utility_1_1expression__read__only__dag__view-members.html  classdagir_1_1utility_1_1expression__read__only__dag__view.html  classdagir_1_1utility_1_1expression__read__only__dag__view.js  (+371 more)
.github/workflows/: ci.yml  codeql-analysis.yml  coverage.yml  documentation.yml  format-and-cppcheck.yml  main.yml  sanitizers.yml  vcpkg-port-check.yml
cmake/: FetchAndPatch.cmake  format.cmake  run_and_capture.cmake
docs/: EXAMPLES.md  IMPLEMENTING_POLICY.md  IMPLEMENTING_READONLY_DAG_VIEW.md  SAMPLES.md  dagir_json_schema.json
examples/expression2bdd/: main.cpp
examples/expression2tree/: CMakeLists.txt  main.cpp
include/: algorithms.hpp
include/dagir/: algorithms.hpp  build_ir.hpp  ir.hpp  ir_attrs.hpp  node_id.hpp  render_dot.hpp  render_json.hpp  render_mermaid.hpp  render_svg.hpp  ro_dag_view.hpp  string_view_cache.hpp  sugiyama.hpp
patches/cudd/: 0001-Enable-cudd-for-Windows-as-a-static-lib.patch  0002-Allow-cudd-to-work-as-a-CMake-sub-project.patch
patches/teddy/: 0001-Backport-leak-fix.patch  0002-Handle-single-variable-edge-case.patch
ports/dagir/: portfile.cmake  vcpkg.json
ports/vcpkg-test/: CMakeLists.txt  test_find_package.cpp
samples/expression2bdd/: main.cpp
samples/expression2tree/: main.cpp
samples/expression_bdd_dot/: all_operators.dot  and_ab.dot  and_chain.dot  complex.dot  deep_all_ops.dot  deeply_nested.dot  eight_queens.dot  four_queens.dot  many_variables.dot  mixed_1.dot  mixed_2.dot  multiple_not.dot  nested_not.dot  not_and_or.dot  not_p.dot  or_chain.dot  or_xy.dot  same_variable.dot  simple_expression.dot  single_var.dot  single_variable_unusual_name.dot  six_queens.dot  underscore_vars.dot  xor_mn.dot
samples/expression_bdd_json/: all_operators.json  and_ab.json  and_chain.json  complex.json  deep_all_ops.json  deeply_nested.json  eight_queens.json  filter_expression.json  four_queens.json  mixed_1.json  mixed_2.json  multiple_not.json  nested_not.json  not_and_or.json  not_p.json  or_chain.json  or_xy.json  same_variable.json  simple_expression.json  single_var.json  single_variable_unusual_name.json  test_subdir_expression.json  xor_chain.json  xor_mn.json
samples/expression_bdd_mermaid/: all_operators.md  and_ab.md  and_ab.mmd  and_chain.md  and_chain.mmd  complex.md  complex.mmd  deep_all_ops.md  deeply_nested.md  eight_queens.md  filter_expression.md  four_queens.md  mixed_1.md  mixed_2.md  mixed_2.mmd  nested_not.md  not_and_or.md  not_p.md  or_chain.md  or_chain.mmd  or_xy.md  or_xy.mmd  simple_expression.md  single_var.md  xor_mn.md  xor_mn.mmd
samples/expression_tree_dot/: all_operators.dot  and_ab.dot  and_chain.dot  complex.dot  deep_all_ops.dot  deeply_nested.dot  eight_queens.dot  filter_expression.dot  four_queens.dot  many_variables.dot  mixed_1.dot  mixed_2.dot  multiple_not.dot  not_and_or.dot  not_p.dot  or_chain.dot  or_xy.dot  same_variable.dot  simple_expression.dot  single_var.dot  single_variable_unusual_name.dot  test_subdir_expression.dot  xor_chain.dot  xor_mn.dot
samples/expression_tree_json/: all_operators.json  and_ab.json  and_chain.json  complex.json  deep_all_ops.json  deeply_nested.json  eight_queens.json  four_queens.json  many_variables.json  mixed_1.json  mixed_2.json  nested_not.json  not_and_or.json  not_p.json  or_chain.json  or_xy.json  same_variable.json  simple_expression.json  single_var.json  single_variable_unusual_name.json  six_queens.json  underscore_vars.json  xor_chain.json  xor_mn.json
samples/expression_tree_mermaid/: and_ab.md  and_chain.md  complex.md  deep_all_ops.md  deeply_nested.md  eight_queens.md  four_queens.md  many_variables.md  mixed_1.md  mixed_2.md  mixed_2.mmd  multiple_not.md  not_and_or.md  not_and_or.mmd  not_p.md  not_p.mmd  or_chain.md  or_chain.mmd  or_xy.md  or_xy.mmd  same_variable.md  single_var.md  single_var.mmd  single_variable.md  xor_mn.md  (+3 more)
scripts/: auto_tune_svg.py  check-format  check-format.ps1  check-format.sh  extensions.sh  pre-commit  process_expressions.ps1
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_2.js  all_3.js  all_4.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  concepts_0.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  enumvalues_5.js  enumvalues_6.js  enumvalues_7.js  files_1.js  files_2.js  files_3.js  files_4.js  (+36 more)
tests/: catch_string_view.cpp  catch_string_view_fix.cpp  catch_string_view_fix.hpp  catch_string_view_fix_impl.cpp  mock_dag.hpp  test_algorithm.cpp  test_build_ir.cpp  test_expression_parser.cpp  test_expression_read_only_dag_view.cpp  test_ir_concepts.cpp  test_render_dot.cpp  test_render_json.cpp  test_render_mermaid.cpp  test_ro_dag_view.cpp  test_ro_dag_view.cpp   werror_compile_check.cpp
(+216 files in other folders)
